--- a/practice/MSTvisualiserMain/MSTstyles.css
+++ b/practice/MSTvisualiserMain/MSTstyles.css
@@ -30,10 +30,20 @@ button:hover
 {
     cursor: pointer;
 }
-#algo-selector
+
+.control-board
+{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5px;
+    height: 50px;
+}
+
+#algo-selector,#speed-selector
 {
     text-align: center;
-    margin-left: 50%;
+    margin:2px;
     padding:10px;
     border: 2px solid blue;
     border-radius: 3px;
